--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
   </div>
   <div id="library-set">
   </div>
+  <div class="attribution">
+    Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> 
+    from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
+  </div>
     <script type="text/javascript" src="./javascript.js"></script>
 </body>
 </html>
