--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <div id="add-book-section">
-      <button id="add-book-button">Add Book</button>
       <form id="add-book-form" class="hidden">
+        <button type="button" id="add-book-button">Add Book</button>
         <label for="book-title">Title</label><br/>
         <input type="text" id="book-title" name="book-title"><br/>
         <label for="book-author">Author</label><br/>
