Adjust page background; add sort button functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <div id="add-book-section" class="hidden">
     <button id="add-book-button">Add Book</button>
+    <button id="sort-books-button">Sort Books</button>
       <form id="add-book-form" >
         <label for="book-title">Title</label><br/>
         <input type="text" id="book-title" name="book-title"><br/>
