--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <input type="submit" id="form-submit" value="Add Book">
       </form>
       <div class="attribution">
-        Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> 
+        "Read" icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> 
         from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>
       </div>
   </div>
