--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <button id="add-book-button">Add Book</button>
     <button id="sort-books-button">Sort Books</button>
       <form id="add-book-form" >
-        <label for="book-title">Title</label><br/>
-        <input type="text" id="book-title" name="book-title"><br/>
-        <label for="book-author">Author</label><br/>
-        <input type="text" id="book-author" name="book-author"><br/>
-        <label for="book-pages">Pages</label><br/>
-        <input type="number" id="book-pages" name="book-pages"><br/>
-        <input type="checkbox" id="yes-read" name="book-have-read" value="Have read">
+        <label for="title">Title</label><br/>
+        <input type="text" id="title" name="title"><br/>
+        <label for="author">Author</label><br/>
+        <input type="text" id="uthor" name="author"><br/>
+        <label for="pages">Pages</label><br/>
+        <input type="number" id="pages" name="pages"><br/>
+        <input type="checkbox" id="yes-read" name="read" value="Have read">
         <label for="yes-read">Have Read?</label><br>
         <input type="submit" id="form-submit" value="Add Book">
       </form>
