--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Library App</title>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <link href="./style.css" type="text/css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <div id="add-book-section" class="hidden">
