--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <button id="sort-books-button">Sort Books</button>
       <form id="add-book-form" >
         <label for="title">Title</label><br/>
-        <input type="text" id="title" name="title"><br/>
+        <input type="text" id="title" name="title" required><br/>
         <label for="author">Author</label><br/>
-        <input type="text" id="uthor" name="author"><br/>
+        <input type="text" id="author" name="author"><br/>
         <label for="pages">Pages</label><br/>
-        <input type="number" id="pages" name="pages"><br/>
+        <input type="number" id="pages" name="pages" min="0"><br/>
         <input type="checkbox" id="yes-read" name="read" value="Have read">
         <label for="yes-read">Have Read?</label><br>
         <input type="submit" id="form-submit" value="Add Book">
